--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                 <div class="row banner-bottom">
                 </div>
                 <div class="row video">
-                    <iframe id="video" width="560" height="315" src="https://youtu.be/LgWX2sPZQsE" frameborder="0" allow="autoplay; encrypted-media"
-                        allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/LgWX2sPZQsE?start=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
