--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
                 <div class="row banner-bottom">
                 </div>
                 <div class="row video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe
+                        src="https://www.youtube.com/embed/{{ include.id }}"
+                        width="700"
+                        height="480"
+                        frameborder="0"
+                        allowfullscreen="">
+                    </iframe>
                 </div>
             </div>
         </section>
