--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="row video">
                     <iframe
-                        src="https://www.youtube.com/embed/{{ include.id }}"
+                        src="https://www.youtube.com/embed/{% include youtube.html id=LgWX2sPZQsE %}"
                         width="700"
                         height="480"
                         frameborder="0"
