--- a/index.html
+++ b/index.html
@@ -65,13 +65,7 @@
                 <div class="row banner-bottom">
                 </div>
                 <div class="row video">
-                    <iframe
-                        src="https://www.youtube.com/embed/{% include youtube.html id=LgWX2sPZQsE %}"
-                        width="700"
-                        height="480"
-                        frameborder="0"
-                        allowfullscreen="">
-                    </iframe>
+                    <iframe width="{{ 560 }}" height="{{ 315 }}" src="https://www.youtube.com/embed/{{ LgWX2sPZQsE }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
