--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 <div class="row banner-bottom">
                 </div>
                 <div class="row video">
-                    <iframe width="{{ 560 }}" height="{{ 315 }}" src="https://www.youtube.com/embed/{{ LgWX2sPZQsE }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/videoseries? 
+                        list=UUJhHaq56JKvZlAQ32OH71nQ&index=0" frameborder="0" 
+                        allowfullscreen>
                 </div>
             </div>
         </section>
