--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     <iframe src="https://www.youtube.com/embed/videoseries? 
                         list=UUJhHaq56JKvZlAQ32OH71nQ&index=0" frameborder="0" 
                         allowfullscreen>
+                    </iframe>
                 </div>
             </div>
         </section>
