--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Space Survivor</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
@@ -65,10 +64,8 @@
                 <div class="row banner-bottom">
                 </div>
                 <div class="row video">
-                    <iframe src="https://www.youtube.com/embed/videoseries? 
-                        list=UUJhHaq56JKvZlAQ32OH71nQ&index=0" frameborder="0" 
-                        allowfullscreen>
-                    </iframe>
+                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/{{ eBzTCbGnlWo }}" frameborder="0" allow="autoplay; encrypted-media"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </section>
