--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 <div class="row banner-bottom">
                 </div>
                 <div class="row video">
-                    <iframe id="video" width="560" height="315" src=src="https://www.youtube.com/embed/LgWX2sPZQsE" frameborder="0" allow="autoplay; encrypted-media"
-                        allowfullscreen></iframe>
+                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/LgWX2sPZQsE/" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                 </div>
             </div>
         </section>
